--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,10 +20,10 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/barcode-scanner": "^4.15.0",
     "@ionic-native/camera": "4.12.0",
     "@ionic-native/core": "^4.11.0",
     "@ionic-native/geolocation": "^4.12.0",
-    "@ionic-native/google-maps": "^4.9.1",
     "@ionic-native/qr-scanner": "4.12.0",
     "@ionic-native/splash-screen": "~4.11.0",
     "@ionic-native/status-bar": "~4.11.0",
@@ -36,17 +36,17 @@
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^4.0.1",
-    "cordova-plugin-googlemaps": "^2.3.11",
-    "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git#2.7.0",
-    "cordova-plugin-ionic-keyboard": "^2.1.2",
-    "cordova-plugin-ionic-webview": "^2.0.3",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^2.2.0",
     "cordova-plugin-qrscanner": "^2.6.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.4.0",
+    "cordova-sqlite-storage": "^2.5.0",
     "firebase": "5.4.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "node-sass": "^4.9.4",
+    "phonegap-plugin-barcodescanner": "8.0.0",
     "promise-polyfill": "8.1.0",
     "rxjs": "6.2.2",
     "rxjs-compat": "6.2.2",
@@ -68,15 +68,12 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-googlemaps": {
-        "API_KEY_FOR_ANDROID": "AIzaSyAY_Sup07Nhaa6Cauh2rA7jOHi7uPZrgPk",
-        "API_KEY_FOR_IOS": "AIzaSyAY_Sup07Nhaa6Cauh2rA7jOHi7uPZrgPk",
-        "PLAY_SERVICES_VERSION": "15.0.1",
-        "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      },
       "cordova-plugin-camera": {},
       "cordova-sqlite-storage": {},
-      "cordova-plugin-qrscanner": {}
+      "cordova-plugin-qrscanner": {},
+      "phonegap-plugin-barcodescanner": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
     },
     "platforms": [
       "ios",
