--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.0.3",
     "@fortawesome/fontawesome-free": "5.2.0",
     "@ng-bootstrap/ng-bootstrap": "3.0.0",
+    "angular2-signaturepad": "2.8.0",
     "angularfire2": "5.0.0-rc.11",
     "bootstrap": "4.1.3",
     "core-js": "^2.5.4",
