--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/camera": "4.12.0",
     "@ionic-native/core": "^4.11.0",
     "@ionic-native/geolocation": "^4.12.0",
+    "@ionic-native/ionic-webview": "^5.0.0-beta.11",
     "@ionic-native/qr-scanner": "4.12.0",
     "@ionic-native/splash-screen": "~4.11.0",
     "@ionic-native/status-bar": "~4.11.0",
@@ -65,13 +66,13 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-camera": {},
       "cordova-sqlite-storage": {},
       "phonegap-plugin-barcodescanner": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      }
+      },
+      "cordova-plugin-ionic-webview": {}
     },
     "platforms": [
       "ios",
