--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.5.4",
     "firebase": "5.4.0",
     "jquery": "3.3.1",
+    "loadash": "1.0.0",
     "ngx-spinner": "6.1.2",
     "rxjs": "^6.0.0",
     "xlsx": "0.14.0",
